2003-01-15 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python subdir moved to gdcmPython (preparation of distutils packaging).

2002-12-16 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h, src/gdcmHeader.cxx: added GetPubTagNames() resp.
        GetPubTagNamesByCategory() to gdcmHeader that return a list of the
        entries within the associated public Dicom dictionary resp. the same
        information but sorted by the fourth field (PAT, IMG, DIR) of the
        dictionary.
        - Dicts/dicomV3.dic Entries which had and unspecified fourth field
          are now in the "???" group.
        - python/gdcm.i changed accordingly,
        - python/demo/printGroupedPublicDict.py added, that gives an example
          of the above new functionalities in Python.

2002-12-11 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcm.h, gdcmHeader.cxx:
        - historic references to glib's g_malloc and g_free (#defined)
          were definitively removed.
        - gdcm.h: cosmetic changes (part of comments moved to Doc/requirements)
      * src/gdcmElValSet.cxx:
        - GetElement(guint32, guint32) renamed to GetElementByNumber.
        - GetElValue(guint32, guint32) renamed to GetElValueByNumber.
        - GetElValue(string) renamed to GetElValueByName.
        - Added GetElementByName(string).
      * src/gdcmHeader.cxx: added
        - GetPubElValRepByNumber(guint16, guint16)
        - GetPubElValRepByName(string)
        - GetShaElValRepByNumber(guint16, guint16)
        - GetShaElValRepByName(string)
        - GetShaElValByNumber(guint16, guint16)
        - GetShaElValRepByName(string)
        - GetElValRepByNumber(guint16, guint16)
        - GetElValRepByName(string)
        - GetElValByNumber(guint16, guint16)
        - GetElValRepByName(string)
      * Doc/requirements.txt added.

2002-12-9 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Test/Makefile building now depends on the one of libgdcm.so